Example with new bootstrap styles

--- a/scss/components/table.scss
+++ b/scss/components/table.scss
@@ -1,5 +1,6 @@
 // .db-thead-light // FIXME - has rogue borders
 // .db-thead-dark // FIXME - has rogue borders
+// .db-table-dark // FIXME - look at borders - seem to be brighter?
 // TODO:
 // .db-table-responsive
 // table colours
